--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,10 @@
     <title>mybrary</title>
 </head>
 <body>
-    <p>top</p>
-    <br>
+    
+    <%- include('../partials/header.ejs') %> 
+    <%- include('../partials/errorMessage.ejs') %> 
     <%- body %> 
-    <br>
-    <p>top</p>
+   
 </body>
 </html>
